examples/rollout-experiment/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: rollout-demo
  annotations:
    ingress.kubernetes.io/proxy-body-size: 100M
    kubernetes.io/ingress.class: nginx
    ingress.kubernetes.io/app-root: /
    nginx.ingress.kubernetes.io/auth-signin: http://$host/oauth2/start?rd=$request_uri
    nginx.ingress.kubernetes.io/auth-url: http://$host/oauth2/auth
spec:
  rules:
  - host: rollout-demo.dev.argoproj.io
    http:
      paths:
      - path: /
        backend:
          serviceName: rollout-demo
          servicePort: 80
